<resources>
    <string name="app_name">Baidu-IDL-FaceSDK</string>
    <string name="detect_no_face">未检测到人脸</string>
    <string name="detect_face_in">把脸移入框内</string>
    <string name="detect_zoom_in">请将脸部靠近一点</string>
    <string name="detect_zoom_out">请将脸部离远一点</string>
    <string name="detect_head_up">请略微抬头</string>
    <string name="detect_head_down">请略微低头</string>
    <string name="detect_head_left">请略微向左转头</string>
    <string name="detect_head_right">请略微向右转头</string>
    <string name="detect_occ_face">脸部有遮挡</string>
    <string name="detect_occ_left_eye">左眼有遮挡</string>
    <string name="detect_occ_right_eye">右眼有遮挡</string>
    <string name="detect_occ_nose">鼻子有遮挡</string>
    <string name="detect_occ_mouth">嘴部有遮挡</string>
    <string name="detect_occ_left_check">左脸颊有遮挡</string>
    <string name="detect_occ_right_check">右脸颊有遮挡</string>
    <string name="detect_occ_chin">下巴有遮挡</string>
    <string name="detect_low_light">请使环境光线再亮些</string>
    <string name="detect_keep">请握稳手机，视线正对屏幕</string>
    <string name="detect_standard">请正对手机</string>
    <string name="detect_timeout">检测超时，请按照提示重试</string>
    <string name="detect_left_eye_close">左眼未睁开</string>
    <string name="detect_right_eye_close">右眼未睁开</string>
    <string name="liveness_eye">眨眨眼</string>
    <string name="liveness_mouth">张张嘴</string>
    <string name="liveness_head_left">向左缓慢转头</string>
    <string name="liveness_head_right">向右缓慢转头</string>
    <string name="liveness_head_up">缓慢抬头</string>
    <string name="liveness_head_down">缓慢低头</string>
    <string name="liveness_good">非常好</string>

    <!--home string-->
    <string name="home_greet_txt">欢迎使用</string>
    <string name="home_greet_sdk_txt">百度人脸采集SDK</string>
    <string name="home_light_txt">识别光线适中</string>
    <string name="home_light_explain_txt">请保证光线不要过暗或过亮</string>
    <string name="home_handset_txt">请正对手机</string>
    <string name="home_handset_explain_txt">保持您的脸出现在取景框内</string>
    <string name="home_mask_txt">避免遮挡</string>
    <string name="home_mask_explain_txt">请保持您的脸部清晰无遮挡</string>
    <string name="home_but_txt">开始人脸采集</string>

    <!--home agreement string-->
    <string name="home_agreement_titlebar_txt">人脸采集协议</string>
    <string name="home_agreement_functional_txt">功能说明</string>
    <string name="home_agreement_functional_explain_txt">
        为保障用户账户的安全，提供更好的服务，在提供部分产品及服务之前,
        采用人脸核身验证功能对用户的身份进行认证，
        用于验证操作人是否为账户持有者本人，
        通过人脸识别结果评估是否为用户提供后续产品或服务。该功能会请求权威数据源进行身份信息确认。
    </string>
    <string name="home_agreement_functional_explain_old_txt">
        该功能会请求权威数据源进行身份信息确认。
    </string>
    <string name="home_agreement_permission_txt">授权与许可</string>
    <string name="home_agreement_permission_explain_txt">
        如您点击“确认”或以其他方式选择接受本协议规则，则视为您在使用人脸识别服务时，
        同意并授权、获取、使用您在申请过程中所提供的个人信息。
    </string>
    <string name="home_agreement_rmation_security_txt">信息安全声明</string>
    <string name="home_agreement_rmation_security_explaoin_txt">
        承诺对您的个人信息严格保密，并基于国家监管部门认可的加密算法进行数据加密传输，数据加密存储，
        承诺尽到信息安全保护义务。
    </string>

    <!--setting string-->
    <string name="setting_titlebar_txt">设置</string>
    <string name="setting_prompt_txt">提示: 正式使用时，开发者可将前端设置功能隐藏</string>
    <string name="setting_announcements_txt">语音播报</string>
    <string name="setting_quality_txt">质量控制</string>
    <string name="setting_live_detect_txt">活体检测</string>
    <string name="setting_actionlive_txt">活体动作顺序随机</string>
    <string name="setting_actionlive_blink_txt">眨眨眼</string>
    <string name="setting_actionlive_shake_head_txt">左右摇头</string>
    <string name="setting_actionlive_turn_left_txt">向左摇头</string>
    <string name="setting_actionlive_turn_right_txt">向右摇头</string>
    <string name="setting_actionlive_nod_txt">向下低头</string>
    <string name="setting_actionlive_look_up_txt">向上抬头</string>
    <string name="setting_actionlive_open_mouth_txt">张张嘴</string>
    <string name="collect_bottom_txt">— 百度大脑技术支持 —</string>


    <string name="setting_quality_control_txt">质量控制设置</string>
    <string name="setting_quality_low_txt">宽松</string>
    <string name="setting_quality_normal_txt">正常</string>
    <string name="setting_quality_high_txt">严格</string>
    <string name="setting_quality_custom_txt">自定义</string>
    <string name="setting_quality_enter_params_txt">参数配置</string>
    <string name="setting_quality_tip1_txt">实名认证场景推荐使用『严格』或『正常』模式</string>
    <string name="setting_quality_tip2_txt">人脸比对场景推荐使用『正常』或『宽松』模式</string>
    <string name="setting_quality_low_params_txt">宽松参数配置</string>
    <string name="setting_quality_normal_params_txt">正常参数配置</string>
    <string name="setting_quality_high_params_txt">严格参数配置</string>
    <string name="setting_quality_custom_params_txt">自定义参数配置</string>
    <string name="setting_quality_save_txt">保存</string>
    <string name="setting_params_min_illum">最小光照值</string>
    <string name="setting_params_max_illum">最大光照值</string>
    <string name="setting_params_blur">模糊度</string>
    <string name="setting_params_left_eye">左眼</string>
    <string name="setting_params_right_eye">右眼</string>
    <string name="setting_params_nose">鼻子</string>
    <string name="setting_params_mouth">嘴巴</string>
    <string name="setting_params_left_cheek">左脸颊</string>
    <string name="setting_params_right_cheek">右脸颊</string>
    <string name="setting_params_chin">下巴</string>
    <string name="setting_params_pitch">俯仰角</string>
    <string name="setting_params_yaw">左右角</string>
    <string name="setting_params_roll">旋转角</string>
    <string name="setting_default_normal">恢复为正常默认参数</string>
    <string name="setting_default_low">恢复为宽松默认参数</string>
    <string name="setting_default_high">恢复为严格默认参数</string>
    <string name="setting_occlu_tips">遮挡阈值（0是无遮挡，1是完全遮挡）</string>
    <string name="setting_headpose_tips">姿态阈值（绝对值，单位：度）</string>

    <string name="dialog_is_save_custom">是否保存自定义配置</string>
    <string name="dialog_is_low_default">是否恢复为宽松默认参数</string>
    <string name="dialog_is_normal_default">是否恢复为正常默认参数</string>
    <string name="dialog_is_high_default">是否恢复为严格默认参数</string>
    <string name="dialog_is_save_modify">是否保存修改</string>
    <string name="dialog_tips1">参数配置已更改，是否保存自定义配置</string>
    <string name="dialog_tips2">参数配置已更改，是否恢复默认</string>
    <string name="dialog_tips3">参数配置已修改，是否保存后离开</string>
    <string name="dialog_button_cancle">取消</string>
    <string name="dialog_button_exit">直接离开</string>
    <string name="dialog_button_save_custom">保存自定义</string>
    <string name="dialog_button_default">恢复默认</string>
    <string name="dialog_button_save">保存并离开</string>
</resources>
