<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f9f9">

    <!--titlebar-->
    <RelativeLayout
        android:id="@+id/agreement_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <ImageView
            android:id="@+id/but_quality_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="13dp"
            android:src="@drawable/setting_image_close_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_quality_control_txt"
            android:textColor="@color/home_text_color_black"
            android:textSize="20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/agreement_layout"
        android:background="#d8d8d8" />

    <!--宽松-->
    <RelativeLayout
        android:id="@+id/relative_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/setting_layout_top_round">

        <RadioButton
            android:id="@+id/radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_radio"
            android:drawablePadding="10dp"
            android:text="@string/setting_quality_low_txt"
            android:textColor="@color/home_text_color_black"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/text_low_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:text="@string/setting_quality_enter_params_txt"
            android:textColor="@color/setting_quality_enter"
            android:drawableRight="@mipmap/icon_setting_quality_enter"
            android:textSize="16sp"/>
    </RelativeLayout>

    <!--正常-->
    <RelativeLayout
        android:id="@+id/relative_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_low"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="#ffffff">

        <RadioButton
            android:id="@+id/radio_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/setting_quality_normal_txt"
            android:textColor="@color/home_text_color_black"
            android:textSize="18sp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_radio"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/text_normal_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:text="@string/setting_quality_enter_params_txt"
            android:textColor="@color/setting_quality_enter"
            android:drawableRight="@mipmap/icon_setting_quality_enter"
            android:textSize="16sp"/>
    </RelativeLayout>

    <!--严格-->
    <RelativeLayout
        android:id="@+id/relative_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_normal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="#ffffff">

        <RadioButton
            android:id="@+id/radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/setting_quality_high_txt"
            android:textColor="@color/home_text_color_black"
            android:textSize="18sp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_radio"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/text_high_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:text="@string/setting_quality_enter_params_txt"
            android:textColor="@color/setting_quality_enter"
            android:drawableRight="@mipmap/icon_setting_quality_enter"
            android:textSize="16sp"/>
    </RelativeLayout>

    <!--自定义-->
    <RelativeLayout
        android:id="@+id/relative_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative_high"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="1dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/setting_layout_bottom_round">

        <RadioButton
            android:id="@+id/radio_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/setting_quality_custom_txt"
            android:textColor="@color/home_text_color_black"
            android:textSize="18sp"
            android:button="@null"
            android:drawableLeft="@drawable/selector_radio"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/text_custom_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:visibility="gone"
            android:text="@string/setting_quality_enter_params_txt"
            android:textColor="@color/setting_quality_enter"
            android:drawableRight="@mipmap/icon_setting_quality_enter"
            android:textSize="16sp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/text_tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/relative_custom"
        android:layout_below="@id/relative_custom"
        android:layout_marginTop="24dp"
        android:textColor="@color/setting_quality_enter"
        android:textSize="14sp"
        android:text="@string/setting_quality_tip1_txt"/>

    <TextView
        android:id="@+id/text_tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/relative_custom"
        android:layout_below="@id/text_tip1"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/setting_quality_enter"
        android:text="@string/setting_quality_tip2_txt"/>

    <!-- 百度logo-->
    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textSize="@dimen/collect_bottom_font"
        android:visibility="gone"
        android:text="@string/collect_bottom_txt"
        android:textColor="@color/collect_bottom_color" />
</RelativeLayout>